force-app/main/default/objects/Invoice__c/fields/Pharma_Products__c.field-meta.xml
<CustomField>
    <fullName>Pharma_Products__c</fullName>
    <label>Pharma Products</label>
    <referenceTo>Pharma__c</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>